<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Athena Sms</string>
    <string name="login_title">Athena SMS Login</string>
    <string name="login_subTitle">Login</string>
    <string name="error_connect">Error!</string>
    <string name="error_io">Unable to connect to server</string>
    <string name="error_reset_button">Reset</string>
    <string name="console_title">Athena SMS Client</string>
    <string name="sms_menu_label">Main Menu</string>
    <string name="config_title">Create Configuration</string>
    <string name="config_host">Enter host name or address</string>
    <string name="config_create">Create!</string>
    <string name="load_connecting">Connecting to service.....</string>
    <string name="touch_screen">Touch Screen To Continue</string>
    
    <string name="console_admin_menu">Admin Menu</string>
    <string name="console_text_menu">Text Menu</string>
    <string name="console_daily_texts">Daily Texts</string>
    <string name="console_show_log">Show Logs</string>
    <string name="console_exit">Log Out</string>
    
    <string name="txt_username">Username</string>
    <string name="txt_userpass">Password</string>
    <string name="btn_login">Login </string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_reset">Reset</string>
    
    <string name="btn_back">Back</string>
    <string name="btn_send">Send</string>
    <string name="txt_msg">Enter Message&#8230;</string>
    
    <string name="btn_confirm_group">Confirm Group Text</string>
    <string name="btn_confirm_holds">Confirm Running Holds</string>
    
    <string name="txt_todays_text">Today\'s Texts</string>
    <string name="txt_outgoing_msgs">Outgoing messages: </string>
    <string name="txt_incoming_msgs">Incoming Messages: </string>
    
    <string name="btn_run_holds">Run Holds</string>
    
    <string name="txt_connecting">Connecting&#8230;</string>
    <string name="txt_search">Search&#8230;</string>
    <string name="txt_direction">Direction</string>
    <string name="txt_loading_data">Loading data&#8230;</string>
    
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    
    
    
    <string name="group_prompt">Choose a Group</string>
    <string-array name="group_names">
    	<item>Admin</item>
    	<item>Techs</item>
    	<item>Manager</item>
    	<item>Staff</item>
    </string-array>
    
    <string name="log_prompt">Please select</string>
    <string-array name="direction_option">
    	<item>Outgoing</item>
    	<item>Incoming</item>
    </string-array>
    
    
</resources>
