<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/popupbg"
	android:gravity="center"
	>
	    
	    <TextView
			android:text="@string/btn_confirm_group"
			android:textSize="26sp"
			android:textColor="#cdf8f2"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
	    	android:gravity="center"
		/>
		
		<TextView
			android:id="@+id/confirmQuestion"
			android:textSize="20sp"
			android:textColor="#cdf8f2"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
	    	android:gravity="center"
		/>
		
	<TableRow
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:gravity="center"
	    >
		
		<Button
			android:id="@+id/confirmGroupTextButton"
			android:text="@string/btn_yes"
        	style="@style/black_buttons"
	    />
		
		<View
		    android:layout_width="40dp"
			android:layout_height="40dp"
		    />
	    
	    <Button
	    	android:id="@+id/cancelGroupTextButton"
	    	android:text="@string/btn_no"
        	style="@style/black_buttons"
	    />
    
    </TableRow>
  
  
</LinearLayout>
