<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/popupbg"
	android:gravity="center"
	>
	
	<LinearLayout
		android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="0.7"
		android:gravity="center"
	    >
	    
	    <TextView
			android:text="@string/btn_confirm_holds"
			android:textSize="26sp"
			android:textColor="#cdf8f2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	    
	    <View
	        android:layout_width="20dp"
			android:layout_height="20dp"
	        />
		
		<TextView
			android:id="@+id/confirmHolds"
			android:textSize="20sp"
			android:textColor="#cdf8f2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		
	</LinearLayout>
		
	<LinearLayout
		android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
		android:gravity="center"
	    >
		
		<Button
			android:id="@+id/confirmRunHoldsButton"
			android:text="@string/btn_yes"
        	style="@style/black_buttons"
	    	/>
		
		<View
	        android:layout_width="20dp"
			android:layout_height="20dp"
	        />
	    
	    <Button
	    	android:id="@+id/cancelRunHoldsButton"
	    	android:text="@string/btn_no"
        	style="@style/black_buttons"
	    	/>
    
    </LinearLayout>
  
  
</LinearLayout>
